--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>  
     <header class="header">
-        <h1 class="titulo">Portfólio</h1>
+        <span class="titulo"><a href="index.html" id="link-titulo">Portfólio</a></span>
+        <a href="./trabalhos.html" class="creditos">Trabalhos</a>
+        <a href="./creditos.html" class="creditos">Créditos</a>
     </header>
         <main>
              <div class="perfil">
@@ -18,8 +20,7 @@
                 <h2 class="meunome">Ricardo Tomasi Da Cruz</h2>
                 <div class="perfilconteudo">
                  <p class="descricao">Meu e-mail: ricotomasi@gmail.com <br> Meu número: (47) 98833-0320</p>
-                <a href="./trabalhos.html" class="trabalhos">Trabalhos</a>
-                <a href="./creditos.html" class="creditos">Créditos</a>
+                
                 </div>
             </div>
         </main>
