--- a/trabalhos.html
+++ b/trabalhos.html
@@ -28,6 +28,16 @@
                 <h2 class="titulotrabalho">Trab</h2>
                 <a href="./trabalhos/trab/index.html" class="entrartrabalho">Entrar no trabalho</a>
             </div>
+
+            <div class="trabalho">
+                <h2 class="titulotrabalho">formulario</h2>
+                <a href="./trabalhos/formulario/index.html" class="entrartrabalho">Entrar no trabalho</a>
+            </div>
+
+            <div class="trabalho">
+                <h2 class="titulotrabalho">cedup</h2>
+                <a href="./trabalhos/paginas/home.html" class="entrartrabalho">Entrar no trabalho</a>
+            </div>
         </main>
 </body>
 </html>
