--- a/solar-system/index.html
+++ b/solar-system/index.html
@@ -18,7 +18,7 @@
       href="assets/img/favicon.ico"
       type="image/x-icon"
     />
-    <title>Solar System</title>
+    <title>sistema solar</title>
   </head>
   <body>
     <button
