--- a/trabalhos.html
+++ b/trabalhos.html
@@ -38,6 +38,10 @@
                 <h2 class="titulotrabalho">cedup</h2>
                 <a href="./trabalhos/paginas/home.html" class="entrartrabalho">Entrar no trabalho</a>
             </div>
+            <div class="trabalho">
+                <h2 class="titulotrabalho">sistema solar</h2>
+                <a href="./trabalhos/solar-system" class="entrartrabalho">Entrar no trabalho</a>
+            </div>
         </main>
 </body>
 </html>
