--- a/solar-system/index.html
+++ b/solar-system/index.html
@@ -29,8 +29,8 @@
     </button>
 
     <h1 id="title">
-      <span>Solar</span>
-      <span>System</span>
+      <span>sistema</span>
+      <span>solar</span>
     </h1>
 
     <main id="solar-system">
@@ -156,7 +156,6 @@
       </section>
     </main>
 
-  
 
     <script src="assets/js/main.js"></script>
   </body>
