--- a/trabalhos.html
+++ b/trabalhos.html
@@ -40,7 +40,7 @@
             </div>
             <div class="trabalho">
                 <h2 class="titulotrabalho">sistema solar</h2>
-                <a href="./trabalhos/solar-system" class="entrartrabalho">Entrar no trabalho</a>
+                <a href="./trabalhos/solar-system/index.html" class="entrartrabalho">Entrar no trabalho</a>
             </div>
         </main>
 </body>
