--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Portfólio</title>
 </head>
 <body>  
+    <button> 
     <header class="header">
-        <span class="titulo"><a href="index.html" id="link-titulo">Portfólio</a></span>
+        <span class="titulo"><a href="index.html" id="link-titulo">Feira De Matemática</a></span>
         <a href="./trabalhos.html" class="creditos">Trabalhos</a>
         <a href="./creditos.html" class="creditos">Créditos</a>
+    </button>        
     </header>
         <main>
              <div class="perfil">
                  <img src="./imagens1/banner.jpg" alt="fundo" class="banner">
                 <img src="./imagens1/fotodeperfil.jpg" alt="foto de perfil" class="fotoperfil">
-                <h2 class="meunome">Ricardo Tomasi Da Cruz</h2>
+                <h2 class="meunome">SISTEMA SOLAR   </h2>
                 <div class="perfilconteudo">
-                 <p class="descricao">Meu e-mail: ricotomasi@gmail.com <br> Meu número: (47) 98833-0320</p>
+                 <p class="descricao">parte da maquete: <br> Eloisa Adria <br> Heloisa Rosa <br> Esmael Tomaz <br> <br>parte de programação: <br> Ricardo Tomasi</p>
                 
                 </div>
             </div>
