--- a/creditos.html
+++ b/creditos.html
@@ -18,7 +18,7 @@
         
         <h1 class="titulocreditos">Créditos </h1>
         <section>
-            <p class="textocreditos">Professor Luis <br> eu(Ricardo) <br> Paty minha boa amiga <br></p>
+            <p class="textocreditos"> eu(Ricardo)</p>
         </section>
         
     </main>
