--- a/trabalhos.html
+++ b/trabalhos.html
@@ -38,10 +38,17 @@
                 <h2 class="titulotrabalho">cedup</h2>
                 <a href="./trabalhos/paginas/home.html" class="entrartrabalho">Entrar no trabalho</a>
             </div>
+
             <div class="trabalho">
                 <h2 class="titulotrabalho">sistema solar</h2>
-                <a href="./trabalhos/index.html" class="entrartrabalho">Entrar no trabalho</a>
+                <a href="./trabalhos/solar-system/index.html" class="entrartrabalho">Entrar no trabalho</a>
             </div>
+
+            <div class="trabalho">
+                <h2 class="titulotrabalho">sistema solar</h2>
+                <a href="./trabalhos/vitalia.html" class="entrartrabalho">Entrar no trabalho</a>
+            </div>
+
         </main>
 </body>
 </html>
